Kubernetes/IngresseController/deployweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-blue
spec:
  selector:
    matchLabels:
      app: web-blue
  template:
    metadata:
      labels:
        app: web-blue
    spec:
      containers:
      - name: web
        image: fabricioveronez/web-page:blue
        resources: {}
        ports:
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-green
spec:
  selector:
    matchLabels:
      app: web-green
  template:
    metadata:
      labels:
        app: web-green
    spec:
      containers:
      - name: web
        image: fabricioveronez/web-page:green
        resources: {}
        ports:
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: web
        image: nginx
        resources: {}
        ports:
        - containerPort: 80
