Kubernetes/IngresseController/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-green
spec:
  selector:
    app: web-green
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-blue
spec:
  selector:
    app: web-blue
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
