Kubernetes/IngresseController/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simples-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-blue
            port: 
              number: 80

###Caso gere errro no ingress
###kubectl delete -A ValidatingWebhookConfiguration ingress-nginx-admission
