Kubernetes/IngresseController/ingresspath.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths: 
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: web-blue
            port: 
              number: 80

      - path: /green
        pathType: Prefix
        backend:
          service:
            name: web-green
            port: 
              number: 80

###Caso gere errro no ingress
###kubectl delete -A ValidatingWebhookConfiguration ingress-nginx-admission
